package com.liyi.design.pattern.structure.adapter.objectadapter;

public class Voltage220V {

    public int output220V(){
        return 220;
    }
}
