package com.liyi.design.pattern.structure.adapter.objectadapter;

public interface Voltage5V {

    int output5v();
}
